Home screen horizontal scroll is fixed

--- a/src/app/account/home.component.scss
+++ b/src/app/account/home.component.scss
@@ -193,3 +193,12 @@ strong{
   font-size: inherit;
   color: #4a4a4a;
 }
+.img-size{
+  width: 120%;
+}
+.newlogo{
+  width:90%
+}
+.login_page_address{
+  margin-bottom: 10px;
+}
